fixed text not showing in search bar

--- a/scss/layout/_searchBar.scss
+++ b/scss/layout/_searchBar.scss
@@ -45,7 +45,7 @@ section#searchBar {
         padding: 6px 10px;
         margin: 8px 0;
         box-sizing: border-box;
-
+        color: $black;
         width: 511px;
         height:37px;	
         border: 1px solid #392F2B;	
