--- a/scss/pages/_feedback.scss
+++ b/scss/pages/_feedback.scss
@@ -8,6 +8,7 @@
         border-radius: 3px;
         background-color: $white;
         font-size: 18px;
+        color: $black;
         @media only screen and (max-width: 982px) {}
         @media only screen and (max-width: 900px) {
             width:100%;
